@@ -9,7 +9,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
+2017-05-25 b3rs3rk
+	Fix: Two more predate instances that should be created
 2017-05-24 b3rs3rk
 	Fix: Tmux monitor query still looking for predate column
 	Fix: Disable timezone checks if connection is to SphinxQL as it doesn't support any TZ variables
